ios gesture bar will no longer overlap with bottom navigator - Added state and onresize handlers to raise/drop component depending on deviation from original window inner height

--- a/src/stylesheets/components/list-types-selector.module.scss
+++ b/src/stylesheets/components/list-types-selector.module.scss
@@ -35,7 +35,13 @@
     height: 30px;
 }
 .raiseOnFullscreen {
-    display: none;
+    height: 0;
+    transition: all 200ms linear;
+}
+.raise {
+    display: block;
+    height: 25px;
+    background-color: whitesmoke;
 }
 @media only screen and (min-device-width: 680px) {
     .selectorContainer {
@@ -47,6 +53,7 @@
         width: 15%;
         padding: 0 30px;
     }
+    .raise { height: 0 }
 }
 @media all and (display-mode: standalone) {
     .raiseOnFullscreen {
