--- a/src/stylesheets/components/wait-for-server.module.scss
+++ b/src/stylesheets/components/wait-for-server.module.scss
@@ -31,6 +31,7 @@
   svg {
     width: 100px;
     height: auto;
+    color: darkslategrey;
   }
 }
 @keyframes loadingRotate {
